# Amazon_product_Reviews-DataScience

./: .gitattributes  .replit  app.py  ml_classifier_utils.py  package-lock.json  pyproject.toml  replit.md
attached_assets/: Bigdata_project_1763341043857.ipynb
pages/: 06_ML_Classifier.py
